# tiny-cuda-nn

./: .editorconfig  .envrc  .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  DOCUMENTATION.md  LICENSE.txt  README.md  flake.nix
.github/workflows/: main.yml
benchmarks/image/: CMakeLists.txt  bench_ours.cu  bench_tensorflow.py  tinyexr.cpp
benchmarks/mlp/: CMakeLists.txt  bench_mlp_ours.cu
bindings/torch/: pyproject.toml  setup.py
bindings/torch/tinycudann/: __init__.py  bindings.cpp  modules.py  ops.py  torch_bindings.cpp
data/: config_hash.json  config_lion.json  config_oneblob.json
data/images/: LICENSE.txt
dependencies/cuda-cmake-github-actions/scripts/actions/: install_cuda_windows.ps1
dependencies/cutlass/arch/: mma_sm80.h
dependencies/cutlass/gemm/: gemm.h
dependencies/cutlass/gemm/device/: gemm.h  gemm_splitk_parallel.h
dependencies/cutlass/gemm/warp/: mma_simt.h  mma_tensor_op.h  mma_tensor_op_sm70.h
dependencies/cutlass_b2b/: b2b_gemm_f16t_f16n_f16t_tensor_op_f16_sm75.h
dependencies/cutlass_b2b/device/: b2b_gemm.h
dependencies/cutlass_b2b/kernel/: default_b2b_gemm.h
dependencies/cutlass_b2b/threadblock/: b2b_mma_pipelined.h  default_b2b_mma.h
dependencies/pcg32/: LICENSE.txt  pcg32.h
dependencies/stbi/: stbi_wrapper.cpp  stbi_wrapper.h
include/tiny-cuda-nn/: activations.h  common.h  common_device.h  common_host.h  config.h  cpp_api.h  cuda_graph.h  cutlass_matmul.h  cutlass_matmul_interface.h  encoding.h  gpu_matrix.h  gpu_memory.h  gpu_memory_json.h  loss.h  matrix_layout.h  ministd.h  misc_kernels.h  mma.h  multi_stream.h  network.h  network_with_input_encoding.h  object.h  optimizer.h  random.h  reduce_sum.h  rtc_kernel.h  trainer.h  vec.h  vec_json.h  vec_pybind11.h
include/tiny-cuda-nn/cutlass_epilogues/: exponential_epilogue.h  relu_transfer_epilogue.h  sine_epilogue.h
include/tiny-cuda-nn/encodings/: composite.h  empty.h  fork.h  frequency.h  grid.h  grid_interface.h  identity.h  multi_level_interface.h  nrc.h  oneblob.h  sequential.h  spherical_harmonics.h  triangle_wave.h
include/tiny-cuda-nn/losses/: constant.h  cross_entropy.h  l1.h  l2.h  mape.h  relative_l1.h  relative_l2.h  relative_l2_luminance.h  smape.h  variance_is.h
include/tiny-cuda-nn/networks/: cutlass_mlp.h  cutlass_resnet.h  fully_fused_mlp.h
include/tiny-cuda-nn/optimizers/: adam.h  average.h  batched.h  composite.h  ema.h  exponential_decay.h  lion.h  lookahead.h  novograd.h  sgd.h  shampoo.h
samples/: CMakeLists.txt  mlp_learning_an_image.cu  mlp_learning_an_image_pytorch.py  tinyexr_wrapper.cpp  tinyexr_wrapper.h
scripts/: common.py  gen_sh.py  test_armadillo_bwdbwd.py  test_armadillo_numeric_align.py  test_grid_bwdbwd.py  test_random_input.py  test_sdf_derivation.py  test_sphere_bwdbwd.py  test_toch_bindings.py  test_torch_bindings.py
src/: CMakeLists.txt  common.cu  common_device.cu  common_host.cu  cpp_api.cu  cutlass_mlp.cu  cutlass_resnet.cu  encoding.cu  fully_fused_mlp.cu  loss.cu  misc_kernels.cu  network.cu  object.cu  optimizer.cu  reduce_sum.cu  rtc_kernel.cu
test/: CMakeLists.txt  grid.cu
tests/: CMakeLists.txt  test_common.h  test_encodings.cu  test_grid.cu  test_jit_losses.cu  test_networks.cu
